Correction contraste

--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #bf5c2e;
+    background-color: #B9572D;
 }
 
 .tc-white {
@@ -779,7 +779,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #bf5c2e;
+    background: #B9572D;
     color: #FFFFFF!important;
 }
 
@@ -1040,3 +1040,4 @@ h4 {
         text-align: center;
     }
 }
+
